# apple-notes-ocr

./: .gitignore  README.md  pyproject.toml
src/apple_notes_ocr/: __init__.py  attachments.py  cli.py  config.py  database.py  parser.py  server.py
